# listening-node

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  config.yaml  main.py  pyproject.toml  settings.yaml
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst
docs/source/apidocs/: index.rst
docs/source/apidocs/listening_node/: listening_node.config.rst  listening_node.listening_node.rst  listening_node.logging_config.rst  listening_node.mic.rst  listening_node.recording_device.rst  listening_node.rst  listening_node.transcription.rst
listening_neuron/: __init__.py  config.py  listening_neuron.py
listening_node/: __init__.py  config.py  listening_node.py  recording_device.py  settings.py
src/: __init__.py  main.rs  mic.py  recording_device.py  whisper_worker.py
whisper_worker/: __init__.py  mic.py  transcription.py  whisper_worker.py
