[tool.poetry]
name = "transcription-client"
version = "0.0.1"
description = ""
authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
llvmlite = "^0.44.0"
numba = "^0.61.0"
openai-whisper = "^20240930"
speechrecognition = "^3.14.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
