[tool.poetry]
name = "listening_node"
version = "0.0.29"
description = ""
authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
llvmlite = "^0.44.0"
numba = "^0.61.0"
openai-whisper = "^20240930"
speechrecognition = "^3.14.1"
pyaudio = "^0.2.14"
pyyaml = "^6.0.2"
rich = "^13.9.4"
pip = "^25.0"
doc-utils = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
sphinx = "^8.1.3"
myst-parser = "^4.0.1"
sphinx-autobuild = "^2024.10.3"
furo = "^2024.8.6"
sphinx-autoapi = "^3.5.0"
sphinx-autodoc2 = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
